	  maps to mulitiple group names (Benedict Lofstedt)
	- added 'make tar' rule for building a distribution tarball
	  (Horacio Rodriguez Montero)
	- fixed serial number handling in dependencies and install
	  code
	- make mips compatible with noarch
	- fixed bug w/ printing string arrays in conditionals
	- handle modern patch programs (> 2.1)
	- handle packages w/ duplicate dependency names

2.4.7 -> 2.4.8:
	- added noarch build compatibilities for ppc, m68k
	- fixed some minor typos (Florian La Roche)
	- added Obsoletes: tag, an upgrade removes packages which
	  have been obsoleted
	- updated rpmdepUpgradePackage() to deal with obsoletes tag
	- convertdb needed to read rpmrc
	- fixed ugly bug in package ordering
	- archivesize tag was incorrect for packages with hard links
	- moved popt into a separate library
	- directory created with %doc is now name-version (dropped
          the release)
	- added buildarch/buildos macros
	- added %ghost file option
	- updated linux.req to only find requirements for exectuable files

2.4.6 -> 2.4.7:
	- had some wrong month lengths in changelog date parsing
	- updated fine-requires (Linux version) to add lines for shell
	  scripts (Donnie Barnes)
	- didn't package / properly
	- pre/post script processing had some erroneous free() calls
	- fixed typos for HP archs in lib/rpmrc.c
	- uname() results should go through *_canon tables before anything
	  else happens
	- set -x in debug shells, not -xs

2.4.5 -> 2.4.6:
	- added os_canon entries for BSD/OS and NextStep
	- replaced include of <malloc.h> with includes of <stdlib.h>
	- fixed md5sum of source packages w/ a buildroot is used
	- fixed bugs installing version 1 packages
	- remove hyphens from uname() result (specifically for HP-UX)
	- hacks to recognize architecture under parisc
	- RPM_INSTALL_PREFIX wasn't being set properly (this should be
	  fixed now)
	- replaced temporary file creation to be race-condition safe
	- prerequisites may not specify versions

2.4.4 -> 2.4.5: